<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="me.eagzzycsl.webinput.AboutActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"

                android:scaleType="centerCrop"
                android:src="@drawable/bkg_icon" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                app:titleTextColor="#f00"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                style="@style/about_title"
                android:text="@string/about_what" />

            <TextView
                style="@style/about_detail"
                android:text="@string/about_what_detail" />

            <TextView
                style="@style/about_title"
                android:text="@string/about_how" />

            <TextView
                style="@style/about_detail"
                android:text="@string/about_how_detail" />

            <TextView
                style="@style/about_title"
                android:text="@string/about_notice" />

            <TextView
                style="@style/about_detail"
                android:text="@string/about_notice_detail" />

            <TextView
                style="@style/about_title"
                android:text="@string/about_bug" />

            <TextView
                style="@style/about_detail"
                android:text="@string/about_bug_detail" />

            <TextView
                style="@style/about_title"
                android:text="@string/about_contact" />

            <TextView
                style="@style/about_detail"
                android:text="@string/about_contact_detail" />

            <TextView
                style="@style/about_title"
                android:text="@string/about_privacy" />

            <TextView
                style="@style/about_detail"
                android:text="@string/about_privacy_detail" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_github"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end" />

</android.support.design.widget.CoordinatorLayout>
